--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-axios": "^2.0.4",
     "react-bootstrap": "^1.4.3",
+    "react-bottom-scroll-listener": "^5.0.0",
     "react-dom": "^17.0.1",
+    "react-infinite-scroll-component": "^6.0.0",
+    "react-intersection-observer": "^8.31.0",
     "react-scripts": "4.0.2",
+    "react-uuid": "^1.0.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
